@@ -1,5 +1,15 @@
 # 📦 Downloads
 
+## Pre-built Binaries
+
+Pre-built binaries are provided for the following distributions. Please be aware that their versions may not always match the latest SRM release.
+
+* **Arch** : [libsrm](https://aur.archlinux.org/packages/libsrm) - *Thanks to [@TrialnError](https://aur.archlinux.org/account/TrialnError)*.
+* **Debian** : [libsrm](https://packages.debian.org/source/sid/libsrm) - *Thanks to [Sudip Mukherjee](https://github.com/sudipm-mukherjee)*.
+* **NixOS** : [srm-cuarzo](https://search.nixos.org/packages?channel=unstable&show=srm-cuarzo&from=0&size=50&sort=relevance&type=packages&query=srm) - *Thanks to [Marco Rebhan](https://github.com/2xsaiko)*.
+
+## Manual Building
+
 SRM depends on the following libraries:
 
 * [hwinfo](https://github.com/vcrhonek/hwdata)
@@ -15,15 +25,9 @@ The **srm-multi-session** example also require:
 * libseat
 * libinput
 
-## Debian (Ubuntu, Linux Mint, etc)
+### Debian (Ubuntu, Linux Mint, etc)
 
-Thanks to [@sudipm-mukherjee](https://github.com/sudipm-mukherjee), you can directly install the library (v0.4.0-1) and examples from the Debian sid repository using the following command:
-
-```bash
-$ sudo apt install libsrm-dev libsrm-examples
-```
-
-To build SRM manually from a Debian based distribution please install the following packages:
+To build SRM from a Debian based distribution please install the following packages:
 
 ```bash
 $ sudo apt install build-essential meson libseat-dev libinput-dev libudev-dev libdrm-dev libgbm-dev libegl1-mesa-dev libgles2-mesa-dev hwinfo libdisplay-info-dev
@@ -48,7 +52,7 @@ $ sudo ldconfig
 
 To ensure that everything is functioning correctly, you can test one of the available [examples](md_md__examples.html).
 
-## RedHat (Fedora, CentOS, openSUSE, etc)
+### RedHat (Fedora, CentOS, openSUSE, etc)
 
 To build SRM from a RedHat based distribution please install the following packages:
 
