@@ -30,6 +30,7 @@ SRMConnector *srmConnectorCreate(SRMDevice *device, UInt32 id)
     connector->id = id;
     connector->device = device;
     connector->state = SRM_CONNECTOR_STATE_UNINITIALIZED;
+    connector->pendingVsync = 1;
     pthread_mutex_init(&connector->stateMutex, NULL);
     pthread_mutex_init(&connector->propsMutex, NULL);
     srmConnectorUpdateProperties(connector);
@@ -480,6 +481,8 @@ void *srmConnectorRenderThread(void *conn)
     // Render loop
     while (1)
     {
+        connector->currentVsync = connector->pendingVsync;
+
         if (!srmRenderModeCommonWaitRepaintRequest(connector))
             break;
 
