@@ -431,6 +431,9 @@ static UInt8 render(SRMConnector *connector)
 
     connector->interface->paintGL(connector, connector->interfaceData);
 
+    if (!connector->currentVsync)
+        glFinish();
+
     return 1;
 }
 
