@@ -5,6 +5,8 @@ SRM (0.5.0-1)
   * Introduced srmConnectorGetSubPixel() to retrieve the subpixel layout of a connected display.
   * Added support for gamma correction through srmConnectorGetGammaSize() and srmConnectorSetGamma().
   * Introduced srmConnectorSetBufferDamageBoxes() to set connector damage using Pixman-style boxes.
+  * Introduced new functions for vsync control: srmConnectorHasVsyncControlSupport(), srmConnectorIsVsyncEnabled(), and srmConnectorEnableVsync().
+    Note: This is currently only supported when using the legacy DRM API, for the atomic API, vsync is always enabled.
 
   # Security Improvements
 
@@ -16,7 +18,7 @@ SRM (0.5.0-1)
   # Documentation
 
   * Enhanced the Doxygen layout to showcase member declarations at the top of each page, accompanied by brief descriptions for improved readability.
-  * Acknowledge the valuable contribution from @sudipm-mukherjee for uploading SRM to the Debian sid repository, highlighted on the Downloads page.
+  * Added a "Pre-built Binaries" section on the Downloads page.
 
   # Building
 
